# Bibliotalk-Discord

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEBASE.txt  DESIGN.md  OPERATIONS.md  QUICKSTART.md  README.md  ROSTER.md  blueprint.md  new_proj_map.md  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run-memory-pages.yml
.specify/memory/: constitution.md
bt_agent/: agent_factory.py  appservice.py  guards.py  llm_registry.py  main.py
bt_agent/discussion/: a2a_server.py  orchestrator.py
bt_agent/tools/: emit_citations.py  memory_search.py
bt_agent/voice/: session_manager.py  transcript.py
bt_cli/: __main__.py
bt_common/: config.py  emos_client.py  matrix_helpers.py  segment.py
bt_voice_sidecar/: matrixrtc.js  mixer.js  package.json
deploy/gcp/: README.md
deploy/local/: .env.example  .gitignore  docker-compose.yml  ghosts.yaml  spirits.yaml
docs/knowledge/: evermemos-api.md  evermemos-memcell.md  evermemos-timestamps.md  gemini-live-api.md  google-a2a.md  google-adk.md  google-gemini-live-guide.md  google-gemini-live.md  matrix-synapse.md  matrix-webrtc.md  nova-act-browser-automation.md  nova-act-overview.md  nova-sonic-example.md  nova-sonic.md  taddy-api.md  taddy-episode-api.md  taddy-podcast-api.md
evermemos_ingest/: README.md  __init__.py  chunking.py  cli.py  config.py  errors.py  evermemos_client.py  ids.py  index.py  ingest.py  manifest.py  models.py  reporting.py
evermemos_ingest/adapters/: base.py  gutenberg.py  local_text.py  (+1 more)
scripts/: backfill_bt_store_v2.py  outline-codebase.sh  replace-terms.py
services/agents_service/: pyproject.toml
services/agents_service/src/: __main__.py  bootstrap.py  cli.py  main.py  server.py
services/agents_service/src/agent/: agent_factory.py  orchestrator.py
services/agents_service/src/agent/providers/: gemini.py
services/agents_service/src/agent/tools/: __init__.py  emit_citations.py  memory_search.py
services/agents_service/src/agents_service/: server.py  store.py
services/agents_service/src/agents_service/agent/tools/: __init__.py  emit_citations.py
services/agents_service/src/agents_service/api/: errors.py  live.py  turns.py
services/agents_service/src/agents_service/audit/: chat_history.py
services/agents_service/src/agents_service/live/: gemini_live_backend.py  session_manager.py
services/agents_service/src/agents_service/models/: citation.py  segment.py
services/agents_service/src/database/: pocketbase_store.py  sqlalchemy_models.py  sqlalchemy_store.py  store.py  supabase_helpers.py
services/agents_service/src/matrix/: appservice.py  client.py  events.py
services/agents_service/src/models/: citation.py
services/agents_service/src/voice/: session_manager.py  transcript.py
services/agents_service/src/voice/backends/: gemini_live.py  nova_sonic.py
services/agents_service/tests/: conftest.py
services/agents_service/tests/contract/: __init__.py  test_evidence_contract.py  test_matrix_events.py
services/agents_service/tests/integration/: test_chat_e2e.py  test_discussion.py
services/agents_service/tests/unit/: test_agent.py  test_guards.py  test_matrix_appservice.py
services/discord_service/: pyproject.toml
services/discord_service/scripts/: seed_figure.py
services/discord_service/src/: __main__.py  config.py  entrypoint.py  runtime.py
services/discord_service/src/bot/: client.py  concierge.py  message_models.py  voice_gateway_proxy.py  voice_transcripts.py
services/discord_service/src/feed/: publisher.py
services/discord_service/src/ops/: __init__.py  feed.py  figure.py  talks.py
services/discord_service/src/talks/: __init__.py  agent_directory.py  directory.py  router.py  service.py  transport.py
services/discord_service/tests/contract/: test_discord_message_models.py
services/discord_service/tests/integration/: test_feed_publication.py  test_quickstart_flow.py  test_runtime_startup.py  test_talk_chat.py
services/discord_service/tests/unit/: test_feed_publisher.py  test_voice_routes.py
services/ingestion_service/: README.md  bibliotalk.db  pyproject.toml
services/ingestion_service/alembic/versions/: 0002_add_source_meta_synced_at.py  0003_add_source_retry_fields.py
services/ingestion_service/scripts/: trigger_ingest.py
services/ingestion_service/src/: __main__.py  cli.py  entrypoint.py  ops.py  server.py
services/ingestion_service/src/adapters/: base.py  blog_crawl.py  document.py  gutenberg.py  http_fetch.py  local_text.py  rss_feed.py  url_tools.py  web_page.py  youtube_transcript.py
services/ingestion_service/src/domain/: __init__.py  errors.py  ids.py  models.py
services/ingestion_service/src/pipeline/: __init__.py  chunking.py  discovery.py  index.py  ingest.py  manifest.py
services/ingestion_service/src/runtime/: __init__.py  config.py  poller.py  reporting.py
services/ingestion_service/tests/: conftest.py
services/ingestion_service/tests/integration/: test_ingest_pipeline.py  test_runtime_startup.py
services/ingestion_service/tests/unit/: test_chunking.py  test_discovery.py  test_ids.py  test_index.py  test_manifest.py  test_pipeline.py  test_poller_concurrency.py  test_poller_timezone.py  test_youtube_transcript.py
services/matrix_service/: eslint.config.js  package.json  pyproject.toml  tsconfig.json
services/matrix_service/src/: server.ts
services/matrix_service/src/matrix/: appservice.ts  auth.ts  client.ts  events.ts  guards.ts  membership.ts  routing.ts
services/matrix_service/src/render/: matrix_message.ts  streaming_edits.ts
services/memory_page_service/: pyproject.toml
services/memory_page_service/src/: app.py  asgi.py  config.py  entrypoint.py  resolver.py
services/memory_page_service/tests/integration/: test_app_http.py  test_memory_pages.py  test_quickstart_memory_pages.py
services/voip_service/: .npmignore  .prettierignore  package.json  pyproject.toml
services/voip_service/src/: audio_bridge.js  index.js  server.js
services/voip_service/src/voip/: bridge_manager.js  discord_bridge.js  http_models.js  matrix_livekit_bridge.js  pcm.js
(+82 files in other folders)
