[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibliotalk"
version = "0.1.0"
description = "Bibliotalk agent monorepo"
readme = "BLUEPRINT.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "evermemos>=0.3.13",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "supabase>=2.6.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
]

[tool.setuptools]
packages = ["bt_common", "bt_agent", "bt_cli", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
