[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_service"
version = "0.1.0"
description = "Bibliotalk ingestion service"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "bt_common>=0.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyYAML>=6.0.1",
  "SQLAlchemy>=2.0.36",
  "yt-dlp>=2025.2.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.9",
]
ingest = [
  "youtube-transcript-api>=0.6.2",
]
web = [
  "feedparser>=6.0.11",
]

[tool.setuptools]
packages = [
  "ingestion_service",
  "ingestion_service.adapters",
  "ingestion_service.domain",
  "ingestion_service.pipeline",
  "ingestion_service.runtime",
]

[tool.setuptools.package-dir]
"ingestion_service" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.uv.sources]
bt-common = { workspace = true }
