[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_service"
version = "0.1.0"
description = "Bibliotalk Matrix adapter service (Node/TS runtime; metadata-only Python package)"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = []
